[metadata]
long_description = file: README.rst, CHANGES.rst
keywords = pcap-ct, pcap, pypcap, libpcap, wpcap, npcap
platforms = any
classifiers =
    Development Status :: 4 - Beta
    Intended Audience :: Developers
    License :: OSI Approved :: BSD License
    Operating System :: OS Independent
    Natural Language :: Polish
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Programming Language :: Python :: Implementation :: Stackless
    Programming Language :: Python :: Implementation :: IronPython
    Programming Language :: Python :: Implementation :: Jython
    Topic :: Software Development :: Libraries :: Python Modules

[options]
python_requires = >=2.7.0,!=3.0.*,!=3.1.*,!=3.2.*,!=3.3.*
setup_requires =
    setuptools>=38.5.1
install_requires =
    setuptools>=38.5.1
    annotate
    libpcap
packages = pcap
zip_safe = True

[options.extras_require]
doc =
    Sphinx>=1.5.3
test =
    unittest2;python_version<'3.0'
    backports.unittest_mock;python_version<'3.0'
    mock;python_version<'3.0'
    dpkt>=1.8.8

[sdist]
formats = zip

[bdist_wheel]
universal = 1
